--- a/src/resource/index.html
+++ b/src/resource/index.html
@@ -38,9 +38,11 @@
             }
 
             function doLogin() {
+                var server = 'jabber.ru'
                 var login = document.getElementById('login').value;
                 var password = document.getElementById('password').value;
                 var info = {
+                    server: server,
                     login: login,
                     password: password
                 };
